@@ -1,3 +1,9 @@
+2011-01-27  Rik  <octave@nomad.inbox5.com>
+
+	* geometry/trimesh.m, geometry/triplot.m, geometry/trisurf.m: Add
+	undocumented function trisurf to documentation.  Update seealso
+	strings.
+
 2011-01-27  John W. Eaton  <jwe@octave.org>
 
 	* general/rat.m: Move @seealso inside @deftypefn in docstring.
